--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
       [style.background]="tile.color">{{tile.text}}</mat-grid-tile>
     }
   </mat-grid-list>
-  <mat-form-field class="example-form-field">
-    <mat-label>pokedex number</mat-label>
-    <input matInput type="text" [(ngModel)]="value" (change)="update()">
-  </mat-form-field>
+  <div class="overlay">
+    <mat-form-field class="example-form-field">
+      <mat-label>pokedex number</mat-label>
+      <input matInput type="text" [(ngModel)]="value" (change)="update()">
+    </mat-form-field>
+  </div>
 </div>
