--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </mat-grid-list>
   <div class="overlay">
     <mat-form-field class="example-form-field">
-      <mat-label>pokedex number</mat-label>
+      <mat-label>national pokedex number</mat-label>
       <input matInput type="text" [(ngModel)]="value" (change)="update()" pattern="\d*" inputmode="numeric">
     </mat-form-field>
   </div>
