--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="pokedex">
   <mat-grid-list cols="3" rowHeight="5rem">
     @for (tile of tiles; track tile) {
-    <mat-grid-tile [colspan]="tile.cols" [rowspan]="tile.rows"
-      [style.background]="tile.color">{{tile.text}}<br>{{tile.number}}</mat-grid-tile>
+    <mat-grid-tile [colspan]="tile.cols" [rowspan]="tile.rows" [style.background]="tile.color"
+      class="tile">{{tile.text}}<br>{{tile.number}}<br>
+      <img src="{{tile.image}}"></mat-grid-tile>
     }
   </mat-grid-list>
   <div class="overlay">
